// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/pages/TodoDetailPage > should render Todo detail with given ID 1`] = `
.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_DETAIL:test123
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`components/pages/TodoDetailPage > should render error on invalid ID 1`] = `
.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_ERROR
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`components/pages/TodoDetailPage > should render error when no ID param 1`] = `
.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_ERROR
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`components/pages/TodoDetailPage should render Todo detail with given ID 1`] = `
.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_DETAIL:test123
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`components/pages/TodoDetailPage should render error on invalid ID 1`] = `
.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_ERROR
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`components/pages/TodoDetailPage should render error when no ID param 1`] = `
.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 0;
}

.c7 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  padding-right: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c13 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c13:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c13:disabled {
  color: #c0c0c0;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  padding: 0 10px;
  font-size: 20px;
  line-height: 40px;
  font-weight: bold;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c20 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

.c19 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  padding: 20px 0;
  text-align: center;
}

.c0 {
  min-height: 100vh;
  width: 100%;
  padding: 0 20px;
  background: #f0f0f0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 320px;
  max-width: 980px;
  min-height: 100vh;
  width: 100%;
  margin: 0 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
}

.c11 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  border-bottom: 1px solid #c0c0c0;
}

.c12:last-child {
  border-bottom: none;
}

.c14 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c14:hover {
  background-color: #c0c0c0;
}

.c16 {
  width: 100%;
  text-align: left;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 20px;
}

.c10 {
  width: 240px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          ☑ 
          TODOLIST
        </a>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <a
            class="c6"
            href="/folder/list"
            title="Složky"
          >
            <i
              class="c7"
            >
              ★
            </i>
          </a>
          <a
            class="c6"
            href="/settings"
            title="Nastavení"
          >
            <i
              class="c7"
            >
              ✎
            </i>
          </a>
        </div>
      </header>
      <main
        class="c8"
      >
        <div
          class="c9"
        >
          <nav
            class="c10"
          >
            <ul
              class="c11"
            >
              <li
                class="c12"
              >
                <a
                  class="c13 c14"
                  href="/?folder="
                >
                  <i
                    class="c7"
                  >
                    ★
                  </i>
                  <span
                    class="c15"
                  >
                    Všechny úkoly
                  </span>
                </a>
              </li>
              <li
                class="c12"
              >
                <a
                  class="c13 c16"
                  href="/folder/list"
                >
                  <i
                    class="c7"
                  >
                    ✎
                  </i>
                  <span
                    class="c15"
                  >
                    Složky
                  </span>
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="c17 c18"
          >
            TODO_ERROR
          </div>
        </div>
      </main>
      <footer
        class="c19"
      >
        <div
          class=""
        >
          Copyright © 2023 MetabaronCZ (
          <a
            class="c20"
            href="https://github.com/MetabaronCZ"
            target="_blank"
          >
            https://github.com/MetabaronCZ
          </a>
          ). All Rights Reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;
